[package]
name = "macro_orm"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true
name = "macro_orm"
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = {version="2.0.114",features=["full"]}
orm = { path = "../rust_orm" }
convert_case = "0.11.0"
pluralizer = "0.5.0"
chrono = "0.4.43"
